# scrapybara-python

./: .fernignore  .gitignore  .gitlab-ci.yml  .travis.yml  LICENSE  README.md  example.ipynb  pyproject.toml  reference.md  serialize.py  setup.py  tox.ini
.github/workflows/: ci.yml  python.yml
.openapi-generator/: FILES
docs/: ExecuteScriptNonStreamingResponse.md  ExecuteScriptRequest.md  ExecuteScriptResponse.md  ExecuteScriptStreamingResponse.md  FetchHtmlRequest.md  FetchHtmlResponse.md  GenerateScriptNonStreamingResponse.md  GenerateScriptRequest.md  GenerateScriptResponse.md  GenerateScriptStreamingResponse.md  GetScriptResponse.md  HelpersApi.md  ScriptExecutionApi.md  ScriptGenerationApi.md  ScriptManagementApi.md
scrapybara/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
scrapybara/anthropic/: __init__.py  base.py
scrapybara/api/: __init__.py  helpers_api.py  script_execution_api.py  script_generation_api.py  script_management_api.py
scrapybara/models/: __init__.py  computer_action.py  config.py  edit_command.py  exceptions.py  execute_script_non_streaming_response.py  execute_script_request.py  execute_script_response.py  execute_script_streaming_response.py  fetch_html_request.py  fetch_html_response.py  generate_script_non_streaming_response.py  generate_script_request.py  instance.py  (+4 more)
test/: test_execute_script_non_streaming_response.py  test_execute_script_request.py  test_execute_script_response.py  test_execute_script_streaming_response.py  test_fetch_html_request.py  test_fetch_html_response.py  test_generate_script_non_streaming_response.py  test_generate_script_request.py  test_generate_script_response.py  test_generate_script_streaming_response.py  test_get_script_response.py  test_helpers_api.py  test_script_execution_api.py  test_script_generation_api.py  test_script_management_api.py
tests/: test_anthropic.py
(+89 files in other folders)
