[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "scrapybara"
version = "0.1.10"
description = "Official Python client for Scrapybara"
authors = ["Scrapybara <hello@scrapybara.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/scrapybara/scrapybara-python"
repository = "https://github.com/scrapybara/scrapybara-python"
documentation = "https://github.com/scrapybara/scrapybara-python"
packages = [{include = "scrapybara"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.8"
requests = ">=2.25.1"
anthropic = "^0.39.0"
pydantic = "^2.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.0"
isort = "^5.0"
ipykernel = "^6.29.5"
